bug(EJ2-39624): remove the API key and add the content.

--- a/Pages/MapBox.razor
+++ b/Pages/MapBox.razor
@@ -8,7 +8,7 @@
         </MapsZoomToolbarSettings>
     </MapsZoomSettings>
     <MapsLayers>
-        @* Add the API key in below Url. *@
+        @* Add the API key in below URL. *@
         <MapsLayer UrlTemplate="https://api.mapbox.com/styles/v1/mapbox/streets-v11/tiles/level/tileX/tileY?access_token=" TValue="string">
             <MapsMarkerSettings>
                 <MapsMarker TValue="MapMarkerDataSource" Visible="true" DataSource="@MarkerDataSource" Height="20" Width="20" Shape="MarkerType.Circle" AnimationDuration="0">
