--- a/Pages/Bing.razor
+++ b/Pages/Bing.razor
@@ -25,8 +25,8 @@
     string url;
     protected override async Task OnInitializedAsync()
     {
-        @* Add the API key in below URL. *@
-        url = await SfMaps.GetBingUrlTemplate("https://dev.virtualearth.net/REST/V1/Imagery/Metadata/RoadOnDemand?output=json&uriScheme=https&key=");
+        @* Add the valid key in below URL. *@
+        url = await SfMaps.GetBingUrlTemplate("https://dev.virtualearth.net/REST/V1/Imagery/Metadata/RoadOnDemand?output=json&uriScheme=https&key=<Enter a valid key here>");
     }
     public List<ToolbarItem> ZoomToolbar = new List<ToolbarItem> { ToolbarItem.Zoom, ToolbarItem.ZoomIn, ToolbarItem.ZoomOut, ToolbarItem.Pan, ToolbarItem.Reset };
     public class MapMarkerDataSource
