--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using SyncfusionMapProviders
-@using SyncfusionMapProviders.Shared
+@using OnlineMapService
+@using OnlineMapService.Shared
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Maps
